--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3| 8.1.2",
+        "darryldecode/cart": "^4.2",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -16,6 +17,7 @@
         "laravel/passport": "^10.3",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.4",
+        "livewire/livewire": "^2.10",
         "yajra/laravel-datatables-oracle": "^9.19"
     },
     "require-dev": {
@@ -42,7 +44,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Helpers/ResponseHelper.php"
+            "app/Helpers/ResponseHelper.php",
+            "app/Helpers/UUIDGenerate.php"
         ]
     },
     "autoload-dev": {
