--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
+        "autoprefixer": "10.4.5",
         "axios": "^0.26.0",
         "bootstrap": "^5.1.3",
         "cross-env": "^7.0",
         "laravel-mix": "^6.0.42",
         "lodash": "^4.17.19",
+        "postcss": "^8.4.14",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "tailwindcss": "^3.0.24"
     }
 }
